Archive table border removed, no longer visible in dark mode.

--- a/style.css
+++ b/style.css
@@ -156,8 +156,8 @@ blockquote:before {
   opacity: .2;
 }
 
-table td:nth-child(1) { width: 7.5em; border: 1px solid white;  }
-table td:nth-child(2) { width: 20em; border: 1px solid white;  }
+table td:nth-child(1) { width: 7.5em; border: 0px;  }
+table td:nth-child(2) { width: 20em; border: 0px;  }
 
 img, svg, video, audio {
   display: inline-block;
